--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sfz",
+  "name": "imgseal",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "GPL-3.0-only",
   "dependencies": {
-    "coffeescript": "^2.7.0"
+    "coffeescript": "^2.7.0",
+    "pdfjs-dist": "^3.11.174"
   }
 }
