--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,63 +1,38 @@
 name: Deploy to github pages
 
-on:   
+on:
   push:
     branches:
       - master
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v4
-        
-      - name: Setup Node.js 📦
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          
-      - name: Setup pnpm 🧰
+          node-version: "20"
+      - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
-          
-      - name: Install dependencies 📥
-        run: pnpm install --no-frozen-lockfile
-        
-      - name: Build project 🏗️
+      - name: Build 🏗
         run: |
-          # 确保构建目录存在
-          mkdir -p public
-          
-          # 使用npx确保能找到coffee命令
-          npx coffee -c -o public src/
-          
-          # 添加部署时间戳
-          DEPLOY_TIME=$(date)
-          sed -i "s/{{ DEPLOY_TIME }}/$DEPLOY_TIME/g" public/test.html
-          
-          # 验证构建结果
-          echo "构建完成，检查文件："
-          ls -la public/
-          
-          # 确保必要文件存在
-          if [ ! -f "public/script.js" ]; then
-            echo "错误: script.js 文件未生成"
-            exit 1
-          fi
-          
-          echo "script.js 文件大小:"
-          wc -c public/script.js
-          
-      - name: Deploy to GitHub Pages 🚀
+          pnpm install --no-frozen-lockfile
+          pnpm add -g coffeescript
+          pnpm build
+          echo "${{ secrets.STATS_SCRIPT }}" > placeholder
+          sed -i "/<!-- placeholder -->/ {
+            r placeholder
+            d
+          }" public/index.html
+      - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: public
           clean: true
+          single-commit: false
+          clean-exclude: |
+            .nojekyll
